--- a/kbase.yml
+++ b/kbase.yml
@@ -2,7 +2,7 @@ module-name:
     EditorApps
 
 module-description:
-    A collection of Editor front end App specifications
+    A KBase module
 
 service-language:
     java
